fix: report archive text alignment
Fixes #1107

--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -4,3 +4,7 @@
     line-height: 1rem;
     border-radius: $border-radius;
 }
+
+.accordion button{
+    text-align: left;
+}
